# JustWatch

./: .eslintrc.cjs  .gitignore  package.json  pnpm-lock.yaml
apps/server/: Cargo.toml  Rocket.toml  TODO.md  package.json
apps/server/src/: api.rs  db.rs  lib.rs  main.rs  models.rs  router.rs  serve.rs  yts.rs
apps/server/src/api/: history.rs  recommendations.rs  search.rs  watchlist.rs
apps/server/src/db/: db_bindings.rs  initialization.rs  migrations.rs  mod.rs  rusqlite.rs
apps/server/src/db/models/: cache.rs  mod.rs  user.rs
apps/server/src/models/: search.rs  user.rs
apps/server/src/router/: api.rs  mod.rs  serve.rs  webui.rs
apps/server/src/router/api/: history.rs  recommendations.rs  search.rs  watchlist.rs
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/@types/webtorrent/: index.d.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
apps/web/src/api/: search.ts
apps/web/src/layout/: BaseLayout.tsx  Header.tsx  Nav.tsx  Sidebar.tsx
apps/web/src/provider/: Theme.tsx
apps/web/src/routes/: History.tsx  Home.tsx  Router.tsx  Settings.tsx  links.ts
apps/web/src/types/: link.ts
