[package]
name = "just-watch"
version = "0.0.1"
edition = "2021"

[dependencies]
rocket = {version = "0.5.0-rc.2", features=["json"]}
serde = {version = "1.0.145", features = ["derive"]}
reqwest ={version = "0.11.12", features = ["json"]}
rust-embed="6.4.1"

# rocket_sync_db_pools ={version = "0.1.0-rc.2", features = ["sqlite_pool"]}


rusqlite_migration="1.0.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }

